--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.61.0
+graphviz==0.21
 kiwisolver==1.4.9
+-e git+https://github.com/PerryXu1/lumen@db7d124adab21c227be64564aa64d69038f94aae#egg=lumen
 matplotlib==3.10.7
 numpy==2.3.5
 packaging==25.0
